# violet_crystal

./: Cargo.toml  README.md
src/: lib.rs  logger.rs
src-scripts/: main.js
src/block/: block_registry.rs  component.rs  mod.rs  permutation.rs  state.rs
src/constant/: important.rs
src/item/: component.rs  item_registry.rs  mod.rs
src/pack/: mod.rs
src/recipe/: mod.rs
src/template/: mod.rs
src/vio/: mod.rs
templates/: bp_manifest.json  bp_manifest.json.jinja2  rp_manifest.json.jinja2
templates/block_serialization/: block.json.jinja2  block_atlas_entry.json.jinja2  blocks.json.jinja2  permutation.json.jinja2  terrain_texture.json.jinja2
templates/block_serialization/components/: collision_box.json.jinja2  crafting_table.json.jinja2  custom_components.json.jinja2  destructible_by_explosion.json.jinja2  destructible_by_mining.json.jinja2  display_name.json.jinja2  flammable.json.jinja2  friction.json.jinja2  geometry.json.jinja2  light_dampening.json.jinja2  light_emission.json.jinja2  loot.json.jinja2  map_color.json.jinja2  transform.json.jinja2
templates/block_serialization/state/: bool_state.json.jinja2  numeric_state.json.jinja2  ranged_state.json.jinja2
templates/item_serialization/: item_atlas_entry.json.jinja2  item_template.json.jinja2  item_texture.json.jinja2
templates/item_serialization/components/: allow_off_hand.json.jinja2  armor.json.jinja2  creative_category.json.jinja2  damage.json.jinja2  (+10 more)
templates/recipe_serialization/: furnace_recipe.json.jinja2  recipe_input.json.jinja2  shaped_recipe.json.jinja2  shapeless_recipe.json.jinja2
(+20 files in other folders)
