[package]
name = "violet_crystal"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Rust-powered addon development framework for Minecraft Bedrock"
repository = "https://github.com/NaKeRNarolino/violet_crystal"
exclude = ["./violet_crystal_results"]
publish = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
serde = { features = ["derive"], version = "1.0.203" }
log = "0.4.20"
simplelog = "0.12.1"
colored = "2.1.0"
syn-select = "0.3.0"
jsonxf = "1.1"
fs_extra = "1.3.0"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
